kubia yaml files/dnsutils.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dnsutils
spec:
  containers:
  - name: dnsutils
    image: tutum/dnsutils
    command: ["sleep", "infinity"]
