kubia yaml files/kubia-manual.yaml
apiVersion: v1 
kind: Pod 
metadata: 
 name: kubia-manual-v2 
 labels:
    creation_method: manual
    env: prod
spec: 
 containers: 
 - image: luksa/kubia 
   name: kubia 
   ports: 
   - containerPort: 8080 
     protocol: TCP
